// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: bitbucket 1`] = `
<ForwardRef(Link)
  className="display-flex-center"
  to={
    {
      "pathname": "/projects/create",
      "search": "?mode=bitbucket",
    }
  }
>
  <img
    alt="bitbucket"
    className="spacer-right"
    src="/images/alm/bitbucket.svg"
    width={16}
  />
  my_account.add_project.bitbucket
</ForwardRef(Link)>
`;

exports[`should render correctly: manual 1`] = `
<ForwardRef(Link)
  className="display-flex-center"
  to={
    {
      "pathname": "/projects/create",
      "search": "?mode=manual",
    }
  }
>
  <ChevronsIcon
    className="spacer-right"
  />
  my_account.add_project.manual
</ForwardRef(Link)>
`;
